--- a/javascript.html
+++ b/javascript.html
@@ -24,6 +24,19 @@ function sendData() {
         data[0] = 'dummy';
         data[1] = document.getElementById('input_id1').value;
         data[2] = document.getElementById('input_id2').value;
+        data[3] = document.getElementById('input_id3').value;
+        data[4] = document.getElementById('input_id4').value;
+        data[5] = document.getElementById('input_id5').value;
+        data[6] = document.getElementById('input_id6').value;
+        data[7] = document.getElementById('input_id7').value;
+        data[8] = document.getElementById('input_id8').value;
+        data[9] = document.getElementById('input_id9').value;
+        data[10] = document.getElementById('input_id10').value;
+        data[11] = document.getElementById('input_id11').value;
+        data[12] = document.getElementById('input_id12').value;
+        data[13] = document.getElementById('input_id13').value;
+        data[14] = document.getElementById('input_id14').value;
+        data[15] = document.getElementById('input_id15').value;
 
         console.log("data", data);
 
